Agregue el enlace a descarga

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <span class="skills">Aplicación móvil  para el aprendizaje del álgebra booleana y circuitos lógicos</span>
                     </div>
                     <div class="col-lg-8 col-lg-offset-2 text-center">
-                        <a href="#" class="btn btn-lg btn-outline">
+                        <a href="https://drive.google.com/open?id=0B2wRZtA4HQkxN0lta21vQmdDYlk" class="btn btn-lg btn-outline">
                             <i class="fa fa-download"></i> Descargar APK
                         </a>
                     </div>
